--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.13.1",
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
