--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "authentication-boilerplate",
+  "name": "vacationeer",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server",
-    "server": "nodemon backend/server",
+    "server": "nodemon -r esm backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/Marmat001/auth-boilerplate#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
-    "body-parser": "^1.19.0",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.10.0",
