--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.10.0",
     "google-auth-library": "^7.0.2",
